--- a/assets/style/modules/_variables.scss
+++ b/assets/style/modules/_variables.scss
@@ -3,4 +3,5 @@ $default-background-color: map-get($colors, verylightgray);
 $default-theme-color: map-get($colors, gamer-green);
 $default-font-size: 16px;
 $default-line-height: 1.15;
-$default-font-family: 'Noto Sans', sans-serif, Helvetica
+$default-font-family: 'Noto Sans', sans-serif, Helvetica;
+$default-article-with: 104ch;
